# mospoly-messanger

./: .gitignore  README.md  database.cpp  database.h  mospolymessenger.pro  server.cpp  serverfunctions.cpp  serverfunctions.h  ТЗ.docx
client/build-client-side-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: Makefile.Debug  Makefile.Release
client/build-client-side-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/debug/: client-side.ilk  qrc_qml.cpp
client/client-side/: client-side.pro  main.cpp  main.h  main.qml
client/client-side/webview/: index.html
docker/: docker-compose.yml
docker/db/: .env
docker/server/: Dockerfile
history_test/: CMakeLists.txt  history_test.pro  tst_history_test_class_serverfunctions.cpp
migrations/: create_user_tokens.sql  create_users_table.sql
server/: .gitignore  client.h  database.cpp  database.h  entities.cpp  entities.h  main.cpp  mospolymessenger  run.sh  server.cpp  server.h  serverfunctions.cpp  serverfunctions.h
test_message/: CMakeLists.txt  message_test.pro  tst_test_function_message.cpp
webview/: package-lock.json  package.json
webview/src/: App.vue  main.js
webview/src/components/: LoadingScreen.vue
